# Chess-AI

./: README.md
main/: Button.cpp  Button.h  CMakeLists.txt  game.cpp  game.h  main.cpp  menu.cpp  menu.h  settings.h
main/AI/: CMakeLists.txt  CNN.cpp  CNN.h  ConvLayer.cpp  ConvLayer.h  FCLayer.cpp  FCLayer.h  FCNN.cpp  FCNN.h  Lens.cpp  Lens.h  PoolingLayer.cpp  PoolingLayer.h  main.cpp  monte_carlo_tree_search.cpp  monte_carlo_tree_search.h  utilities.cpp  utilities.h
main/AI/move_generator/: CMakeLists.txt  move.cpp  move.h  position.cpp  position.h  test.cpp  test.h  todo  types.h  undo_info.cpp  undo_info.h
